# Blender-metahuman-MCP

./: .gitignore  mcp.json  pyproject.toml  requirements.txt  run_server.bat  setup.bat
blender_addon/: __init__.py  command_router.py  tcp_server.py
blender_addon/handlers/: __init__.py  bone_handler.py  export_handler.py  mesh_handler.py  scene_handler.py  shape_key_handler.py
blender_addon/utils/: __init__.py  thread_safe.py
face_reconstruction/: __init__.py  feature_mapper.py  landmark_detector.py  proportion_analyzer.py  reference_proportions.py
mcp_server/: __init__.py  blender_connection.py  server.py
mcp_server/tools/: __init__.py  bone_tools.py  face_tools.py  photo_tools.py  preset_tools.py  scene_tools.py  shape_key_tools.py
semantic_layer/: __init__.py  face_map.py  presets.py  validators.py
tests/: test_connection.py  test_face_reconstruction.py  test_semantic_layer.py
