[project]
name = "blender-metahuman-mcp"
version = "0.1.0"
description = "MCP bridge for editing MetaHuman facial features in Blender via Claude Code"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "mcp>=1.4.1",
    "mediapipe>=0.10.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
blender-metahuman-mcp = "mcp_server.server:main"
